--- a/Jwt-Authentication/Jwt-Authentication.csproj
+++ b/Jwt-Authentication/Jwt-Authentication.csproj
@@ -5,5 +5,11 @@
     <RootNamespace>Jwt_Authentication</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.10" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.8.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
+  </ItemGroup>
+
 
 </Project>
